<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/zzzzz_lightadjust_preference_general_settings">
        <ListPreference android:entries="@array/zzzzz_lightadjust_general_preference_light_sensor_poll_rate_entries" android:title="@string/zzzzz_lightadjust_general_parameter_light_sensor_poll_rate" android:key="light_sensor_poll_rate" android:defaultValue="standard" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_light_sensor_poll_rate" android:entryValues="@array/zzzzz_lightadjust_general_preference_light_sensor_poll_rate_values" />
        <ListPreference android:entries="@array/zzzzz_lightadjust_general_preference_brightness_fade_speed_entries" android:title="@string/zzzzz_lightadjust_general_parameter_brightness_fade_speed" android:key="brightness_fade_speed" android:defaultValue="standard" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_brightness_fade_speed" android:entryValues="@array/zzzzz_lightadjust_general_preference_brightness_fade_speed_values" />
        <ListPreference android:entries="@array/zzzzz_lightadjust_general_preference_brightness_step_size_entries" android:title="@string/zzzzz_lightadjust_general_parameter_brightness_step_size" android:key="brightness_step_size" android:defaultValue="standard" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_brightness_step_size" android:entryValues="@array/zzzzz_lightadjust_general_preference_brightness_step_size_values" />
        <CheckBoxPreference android:title="@string/zzzzz_lightadjust_general_parameter_fade_brightness_changes" android:key="fade_brightness_changes" android:defaultValue="true" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_fade_brightness_changes" />
        <EditTextPreference android:title="@string/zzzzz_lightadjust_general_parameter_minimum_brightness" android:key="minimum_brightness" android:defaultValue="2" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_minimum_brightness" android:dialogMessage="@string/zzzzz_lightadjust_input_value_between_0_to_100" />
        <EditTextPreference android:title="@string/zzzzz_lightadjust_general_parameter_maximum_brightness" android:key="maximum_brightness" android:defaultValue="100" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_maximum_brightness" android:dialogMessage="@string/zzzzz_lightadjust_input_value_between_0_to_100" />
        <ListPreference android:entries="@array/zzzzz_lightadjust_general_preference_lenovo_antishake_interval_up_entries" android:title="@string/zzzzz_lightadjust_general_parameter_lenovo_antishake_interval_up" android:key="lenovo_antishake_interval_up" android:defaultValue="standard" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_lenovo_antishake_interval_up" android:entryValues="@array/zzzzz_lightadjust_general_preference_lenovo_antishake_interval_up_values" />
        <ListPreference android:entries="@array/zzzzz_lightadjust_general_preference_lenovo_antishake_interval_down_entries" android:title="@string/zzzzz_lightadjust_general_parameter_lenovo_antishake_interval_down" android:key="lenovo_antishake_interval_down" android:defaultValue="standard" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_lenovo_antishake_interval_down" android:entryValues="@array/zzzzz_lightadjust_general_preference_lenovo_antishake_interval_down_values" />
        <CheckBoxPreference android:title="@string/zzzzz_lightadjust_general_parameter_show_notification_control_panel" android:key="show_notification_control_panel" android:defaultValue="false" android:dialogTitle="@string/zzzzz_lightadjust_general_parameter_show_notification_control_panel" />
    </PreferenceCategory>
</PreferenceScreen>